bad/var_decl_init_invalid_conversion_string_void.example_compiler_output
ERROR
[1mbad/var_decl_init_invalid_conversion_string_void.lat:4:11: [1;31merror: [0;1mincompatible types: cannot assign variable of type `string` with an expression of type `void`[m
	string x = foo();
	         [1;32m^[m
